# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  hexlet-check.yml  test_django.yaml
hexlet_code.egg-info/: PKG-INFO  requires.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  apps.py  forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0004_alter_status_options_alter_status_created_at_and_more.py
task_manager/task_manager/: settings.py
task_manager/tasks/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0003_task_labels_alter_task_created_at_and_more.py
task_manager/templates/: base.html  index.html
task_manager/tests/: settings_test.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0002_alter_user_options_managers_more.py
