[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Maxim Shevtsov", email= "Shevtsov_stv@mail.ru" }
]
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=3.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "psycopg2-binary>=2.9.10",
    "django-bootstrap5>=25.1",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "django-filter>=25.1",
    "rollbar>=1.3.0",
    "pytest-cov>=6.1.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "coverage>=7.10.2",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.7",
]

[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["task_manager"]